--- a/imgui.ini
+++ b/imgui.ini
@@ -3,6 +3,10 @@ Pos=60,60
 Size=400,400
 
 [Window][Sample Gfx Program]
-Pos=60,60
-Size=353,202
+Pos=6,11
+Size=413,383
+
+[Window][Materials Editor]
+Pos=1376,36
+Size=523,1038
 
