--- a/imgui.ini
+++ b/imgui.ini
@@ -7,6 +7,14 @@ Pos=6,11
 Size=413,383
 
 [Window][Materials Editor]
-Pos=1376,36
-Size=523,1038
+Pos=1344,46
+Size=549,698
+
+[Window][Dear ImGui Demo]
+Pos=1719,205
+Size=550,680
+
+[Window][Texture Editor Window]
+Pos=431,161
+Size=866,635
 
