wrote a heap memory counter/tracker
- Heap Memory Counter/Tracker Profiler:- displays information in the console whenever memory is allocated or deallocated, allowing for effective tracking.

- Macro and Struct Scope Tools for Profiling tool:- allows to wrap an intermediate code block with a macro or scope, enabling the tracking of memory usage specific to that block.

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,18 +3,78 @@ Pos=60,60
 Size=400,400
 
 [Window][Sample Gfx Program]
-Pos=6,11
+Pos=10,10
 Size=413,383
 
 [Window][Materials Editor]
-Pos=1344,46
-Size=549,698
+Pos=1354,10
+Size=544,961
 
 [Window][Dear ImGui Demo]
-Pos=1719,205
+Pos=1800,167
 Size=550,680
 
 [Window][Texture Editor Window]
-Pos=431,161
-Size=866,635
+Pos=449,92
+Size=1000,740
+
+[Window][xture Editor Window GPU: ]
+Pos=119,147
+Size=699,749
+
+[Window][ Editor Window GPU: ]
+Pos=635,251
+Size=699,601
+
+[Window][Texture Editor Window GPU: 2]
+Pos=127,296
+Size=474,602
+
+[Window][Texture Editor Window GPU: 7]
+Pos=563,28
+Size=504,604
+
+[Window][Texture Editor Window GPU: 8]
+Pos=1165,47
+Size=712,760
+
+[Window][Texture Editor Window GPU: 2{WIP}]
+Pos=60,60
+Size=396,433
+
+[Window][Texture Editor Window GPU: 7{WIP}]
+Pos=199,437
+Size=547,556
+
+[Window][Texture Editor Window GPU: 8{WIP}]
+Pos=752,276
+Size=743,614
+
+[Window][Texture Editor Window GPU: 2 {WIP}]
+Pos=154,441
+Size=391,466
+
+[Window][Texture Editor Window GPU: 7 {WIP}]
+Pos=1291,70
+Size=456,515
+
+[Window][Texture Editor Window GPU: 8 {WIP}]
+Pos=1210,370
+Size=523,548
+
+[Window][Lets Go]
+Pos=716,633
+Size=367,99
+
+[Window][Texture Editor Window GPU: 2 {WIP}.]
+Pos=733,154
+Size=390,491
+
+[Window][Texture Editor Window GPU: 7 {WIP}.]
+Pos=178,285
+Size=474,444
+
+[Window][Texture Editor Window GPU: 8 {WIP}.]
+Pos=1443,91
+Size=564,443
 
