--- a/imgui.ini
+++ b/imgui.ini
@@ -3,12 +3,12 @@ Pos=60,60
 Size=400,400
 
 [Window][Sample Gfx Program]
-Pos=10,9
+Pos=1,0
 Size=413,383
 
 [Window][Materials Editor]
-Pos=1371,-1
-Size=544,964
+Pos=1400,2
+Size=544,655
 
 [Window][Dear ImGui Demo]
 Pos=1800,167
@@ -64,15 +64,15 @@ Size=523,548
 
 [Window][Lets Go]
 Pos=69,405
-Size=367,99
+Size=452,156
 
 [Window][Texture Editor Window GPU: 2 {WIP}.]
-Pos=1235,572
+Pos=1235,179
 Size=484,682
 
 [Window][Texture Editor Window GPU: 7 {WIP}.]
-Pos=1227,23
-Size=505,536
+Pos=1,562
+Size=505,509
 
 [Window][Texture Editor Window GPU: 8 {WIP}.]
 Pos=603,169
@@ -87,14 +87,35 @@ Pos=60,60
 Size=318,274
 
 [Window][Direction Light UI]
-Pos=8,397
-Size=414,378
+Pos=1,385
+Size=414,174
 
 [Window][Render Target Viewport]
-Pos=619,658
-Size=726,476
+Pos=701,5
+Size=505,266
 
 [Window][Multi Render Target Viewport]
-Pos=1323,36
-Size=576,948
+Pos=1401,356
+Size=497,856
+
+[Window][Points Distribution Editor UI]
+Pos=49,519
+Size=513,261
+
+[Window][GameObject Inspector]
+Pos=1504,17
+Size=379,1012
+
+[Window][SSAO Inspector Editor UI]
+Pos=15,399
+Size=411,249
+
+[Window][Noise Texture Debug!!!!!!]
+Pos=1251,66
+Size=989,720
+Collapsed=1
+
+[Window][Scene lighting]
+Pos=-10,703
+Size=505,450
 
