Refactor: {harded coded paths - dynamic paths} PGL_ASSETS_PATH for all asset paths, relative path determined at project generation time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ project(${PROJECT_NAME})
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+option(AS_MODULE "Build pregl as a standalone project with its own main" OFF)
+
 #General Properties (Config Properties > General > this)
 #output directory
 set(CMAKE_BINARY_DIR "${PROJECT_SOURCE_DIR}/Intermediate/\$<CONFIG>")
@@ -25,7 +27,12 @@ file(GLOB_RECURSE source_files "pregl/*.h" "pregl/*.cpp" "samples/*.h" "samples/
 file(GLOB_RECURSE library_files "libs/*.h" "libs/*.c" "libs/*.cpp")
 
 set(ALL_SRC_FILES ${source_files} ${library_files})
-add_executable(${PROJECT_NAME} ${ALL_SRC_FILES})
+
+if(AS_MODULE)
+	add_library(${PROJECT_NAME} STATIC ${ALL_SRC_FILES})
+else()
+	add_executable(${PROJECT_NAME} ${ALL_SRC_FILES})
+endif()
 
 
 #Additional Include Directories (Properties > C/C++ > General > this)
@@ -49,6 +56,14 @@ target_link_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/libs/glew/l
 target_link_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/libs/assimp/lib)
 
 
+if(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})										
+	target_compile_definitions(${PROJECT_NAME} PUBLIC PGL_ASSETS_PATH="Assets")
+else()									
+	get_filename_component(PGL_FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)	
+	target_compile_definitions(${PROJECT_NAME} PUBLIC PGL_ASSETS_PATH="${PGL_FOLDER_NAME}/assets")
+endif()
+
+
 #Link Dependencies
 target_link_libraries(${PROJECT_NAME} opengl32.lib glew32.lib glfw3.lib assimp-vc143-mtd.lib)
 
@@ -60,14 +75,18 @@ set_target_properties(${PROJECT_NAME} PROPERTIES OBJECT_OUTPUT_DIRECTORY "${PROJ
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
 
 
-
-#Copy require dll files to output directory (glew32.dll, assimp-vc143-mt.dll)
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD 
-				   COMMAND ${CMAKE_COMMAND} -E copy_if_different
+if(AS_MODULE)
+	message(STATUS "pregl as a module")
+else()
+message(STATUS "pregl as a standalone project")
+	#Copy require dll files to output directory (glew32.dll, assimp-vc143-mt.dll)
+	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD 
+					   COMMAND ${CMAKE_COMMAND} -E copy_if_different
 						   #copy glew dll file
 						   ${PROJECT_SOURCE_DIR}/libs/glew/bin/Release/x64/glew32.dll  
 						   #copy assimp dll file
 						   ${PROJECT_SOURCE_DIR}/libs/assimp/bin/assimp-vc143-mtd.dll
 						   $<TARGET_FILE_DIR:${PROJECT_NAME}>)
+endif()
 
  
