Support for Resize with scale, bug fix with wrong parameter for Framebuffer Target texture resize
- Resize callback with scale
// app_window --> target window
// class_fun_signature --> callback function symbol  &GPUResource::MultiRenderTarget::ResizeBuffer (ResizeBuffer(unsigned int width, unsigned int height))
// class_inst --> class variable instance
// resize_scale --> usually (1.0f) using normal window resize but useful for downsampling or upsampling buffers eg
// eg 0.5f halves the resolution when Resizing (use case SSAO frame buffer) etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ target_link_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/libs/assimp
 
 
 if(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})										
-	target_compile_definitions(${PROJECT_NAME} PUBLIC PGL_ASSETS_PATH="Assets")
+	target_compile_definitions(${PROJECT_NAME} PUBLIC PGL_ASSETS_PATH="assets")
 else()									
 	get_filename_component(PGL_FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)	
 	target_compile_definitions(${PROJECT_NAME} PUBLIC PGL_ASSETS_PATH="${PGL_FOLDER_NAME}/assets")
