--- a/imgui.ini
+++ b/imgui.ini
@@ -7,8 +7,9 @@ Pos=1,0
 Size=413,383
 
 [Window][Materials Editor]
-Pos=1400,2
+Pos=1270,41
 Size=544,655
+Collapsed=1
 
 [Window][Dear ImGui Demo]
 Pos=1800,167
@@ -95,8 +96,9 @@ Pos=701,5
 Size=505,266
 
 [Window][Multi Render Target Viewport]
-Pos=1401,356
+Pos=1339,356
 Size=497,856
+Collapsed=1
 
 [Window][Points Distribution Editor UI]
 Pos=49,519
@@ -109,6 +111,7 @@ Size=379,1012
 [Window][SSAO Inspector Editor UI]
 Pos=15,399
 Size=411,249
+Collapsed=1
 
 [Window][Noise Texture Debug!!!!!!]
 Pos=1251,66
